--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "axios": "^0.21.1",
     "express": "^4.17.1",
+    "socket.io": "^4.0.1",
+    "socket.io-client": "^4.0.1",
     "validator": "^13.5.2"
   },
   "devDependencies": {
